force-app/main/default/objects/Farmer_DB__c/Farmer_DB__c.object-meta.xml
<CustomObject>
    <label>Farmer DB</label>
    <nameField>
        <label>Farmer DB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Farmers DB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>