force-app/main/default/objects/Farmer_DB__c/fields/Expenidture__c.field-meta.xml
<CustomField>
    <fullName>Expenidture__c</fullName>
    <label>Expenidture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>