force-app/main/default/objects/Farmer_DB__c/fields/Farmer_Name__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Name__c</fullName>
    <label>Farmer Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>